Fixed article section overflow problem, and also stylize article section

--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,6 @@
   height: 200vh;
 }
 
-.article-picture {
-  /* height: 100vh; */
-}
-
 .calc-section {
   /* background-color: rebeccapurple; */
   display: flex;
