--- a/src/Components/ArticlePictureSection.css
+++ b/src/Components/ArticlePictureSection.css
@@ -1,29 +1,61 @@
 .ArticlePictureSection {
-    max-width: 100%;
-    width: 100%;
-    /* min-width: 100%; */
-    background-color: #405a4e;
-    height: 88vh;
-  }
+  width: 100%;
+  background-color: #405a4e;
+  height: 88vh;
+  padding: 1rem 2rem 1rem 2rem;
+}
   
-  .carousel-item {
-    text-align: center; /* Center-align the image and description */
-    padding: 20px; /* Add spacing between the image and description */
-  }
-  
-  .carousel-image {
-    max-width: 100%;
-    width: auto;
-    max-height: 300px;
-    display: block;
-    margin: 0 auto;
-    border-radius: 10px; /* Add border radius to the images */
-  }
-  
-  .image-description {
-    margin-top: 10px; /* Add space between the image and description */
-    font-size: 16px; /* Customize the description font size */
-    color: #ffffff; /* Customize the description text color */
-  }
+.article-card{
+  height: 100%;
+  /* border: 1px solid yellow; */
+  width: 100%;
+}
 
+.carousel-items {
+  text-align: left; 
+  padding: 1rem; 
+  display: flex;
+  /* background-color: red; */
+}
+
+.carousel-items-left {
+  width: 60%;
+  display: flex;
+  text-align: left;
+  /* border: 1px solid yellow;
+  background-color: green; */
+}
+
+.carousel-items-right {
+  display: flex;
+  width: 40%;
+  flex-direction: column;
+  padding-left: 1rem;
+  text-align: left;
+  /* background-color: green;
+  border: 1px solid pink; */
+}
+
+.carousel-items-right h2 {
+  color: antiquewhite;
+}
+
+.carousel-items-right p {
+  color: white;
+  font-size: 1.2rem;
+}
+
+.carousel-image {
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 5/3.2;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 10px;
+}
   
+.image-description {
+  margin-top: 10px; 
+  /* font-size: 16px;  */
+  color: #ffffff; 
+}
